Bug 247360 - When I try to draw a rectangle across date boundaries, the rectangle transforms in a polygon with various shapes.
Summary: When I try to draw a rectangle across date boundaries, the rectangle transfor...
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 0.8 (KDE 4.3)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-11 12:40 UTC by Gabriel Voicu
Modified: 2013-10-20 08:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot about how this problem looks. (249.70 KB, image/jpeg)
2010-08-11 12:40 UTC, Gabriel Voicu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriel Voicu 2010-08-11 12:40:40 UTC
Created attachment 50004 [details]
Screenshot about how this problem looks.

Version:           unspecified (using KDE 4.4.3) 
OS:                Linux

Digikam's gpssearch tool uses marble widget to help people search their photos geographical. To search photos on the map, one has to draw a rectangle over the map and the photos inside it will appear on the icon-view.
The problem appears here when one tries to draw a rectangle across date boundaries. When that happens, the rectangle transforms into a polygon having different forms. Here is the code that I use to draw the rectangle: http://pastebin.com/2rkzkxp6 . I've also attached a screenshot to make a better idea of what the problem is. If you want to experiment the problem, you should compile digiKam's branch (http://websvn.kde.org/branches/extragear/graphics/digikam/), because this code hasn't been released yet.   

Reproducible: Didn't try

Steps to Reproduce:
Draw a rectangle from Japan to Mexico above Pacific Ocean.

Actual Results:  
The rectangle changes it's shape.

Expected Results:  
The rectangle should remain a rectangle.
Comment 1 Thibaut Gridel 2012-02-16 20:20:09 UTC
Git commit b80bf64c501a8e272d94325838a7384ffe1b02e1 by Thibaut Gridel.
Committed on 16/02/2012 at 21:08.
Pushed by tgridel into branch 'master'.

GeoPainter: specific rendering for untesselated linestrings across IDL
REVIEW: 103876

M  +38   -0    src/lib/Projections/AbstractProjection.cpp
M  +2    -0    src/lib/Projections/AbstractProjection_p.h
M  +4    -2    src/lib/geodata/data/GeoDataLineString.cpp
M  +3    -3    src/lib/geodata/data/GeoDataLinearRing.cpp

http://commits.kde.org/marble/b80bf64c501a8e272d94325838a7384ffe1b02e1