GeoPainter: specific rendering for untesselated linestrings across IDL

BUG: 247360
REVIEW: 103876