src/lib/geodata/data/GeoDataLinearRing.cpp
@@ -49,10 +49,11 @@ QVector<GeoDataLineString*> GeoDataLinearRing::toRangeCorrected() const
     if ( p()->m_dirtyRange ) {
 
         qDeleteAll( p()->m_rangeCorrected ); // This shouldn't be needed
+        p()->m_rangeCorrected.clear();
 
         GeoDataLinearRing poleCorrected;
 
-        if ( latLonAltBox().crossesDateLine() )
+        if ( latLonAltBox().crossesDateLine() && tessellate() )
         {
             GeoDataLinearRing normalizedLineString = toNormalized();
             poleCorrected = normalizedLineString.toPoleCorrected();
@@ -60,9 +61,8 @@ QVector<GeoDataLineString*> GeoDataLinearRing::toRangeCorrected() const
         }
         else {
             poleCorrected = toPoleCorrected();
+            p()->m_rangeCorrected.append( new GeoDataLinearRing(poleCorrected));
         }
-
-        p()->m_rangeCorrected = poleCorrected.toDateLineCorrected();
     }
 
     return p()->m_rangeCorrected;
